<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/addressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="친구 관리"
            android:textSize="18dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="50dp"
            android:tag="menu"/>

        <ImageButton
            android:id="@+id/msgChatBtn"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:scaleType="fitXY"
            android:background="@drawable/chat"
            android:src="@drawable/chat"
            android:layout_marginRight="15dp"
            android:layout_alignParentRight="true"
            android:onClick="onClick" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/roomBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/room_menu_button"
            android:textColor="@color/room_menu_color"
            android:textSize="20dp"
            android:text="@string/fa_chat"
            android:paddingBottom="5dp"
            android:tag="fas" />

        <Button
            android:id="@+id/friendBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/room_menu_button"
            android:textColor="@color/room_menu_color"
            android:textSize="20dp"
            android:text="@string/fa_friends"
            android:paddingBottom="5dp"
            android:tag="fas" />

        <Button
            android:id="@+id/notifyBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/room_menu_button"
            android:textColor="@color/room_menu_color"
            android:textSize="20dp"
            android:text="@string/fa_notify"
            android:paddingBottom="5dp"
            android:tag="fas" />

        <Button
            android:id="@+id/settingBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/room_menu_button"
            android:textColor="@color/room_menu_color"
            android:textSize="20dp"
            android:text="@string/fa_profile"
            android:paddingBottom="5dp"
            android:tag="fas" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/roomFragContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
