<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:background="@color/colorPrimary">

            <ImageButton
                android:id="@+id/msgBackBtn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="fitXY"
                android:background="@drawable/back"
                android:src="@drawable/back"
                android:layout_marginLeft="15dp"
                android:onClick="onClick" />

            <TextView
                android:id="@+id/friendNicknameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="125dp"
                android:tag="menu"/>

            <ImageButton
                android:id="@+id/msgFindBtn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="fitXY"
                android:background="@drawable/find"
                android:src="@drawable/find"
                android:layout_marginRight="105dp"
                android:layout_alignParentRight="true"
                android:onClick="onClick" />

            <ImageButton
                android:id="@+id/msgChatBtn"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:scaleType="fitXY"
                android:background="@drawable/chat"
                android:src="@drawable/chat"
                android:layout_marginRight="65dp"
                android:layout_alignParentRight="true"
                android:onClick="onClick" />

            <View
                android:layout_width="1.5dp"
                android:layout_height="22dp"
                android:background="@color/colorPrimaryLight"
                android:layout_marginRight="50dp"
                android:layout_alignParentRight="true" />

            <ImageButton
                android:id="@+id/msgMenuBtn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="fitXY"
                android:background="@drawable/menu"
                android:src="@drawable/menu"
                android:layout_marginTop="1dp"
                android:layout_marginRight="15dp"
                android:layout_alignParentRight="true"
                android:onClick="onClick" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/msgListView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:divider="@android:color/transparent"
                android:dividerHeight="5dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@drawable/layout_border"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/msgEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="120dp"
                    android:paddingLeft="3dp"
                    android:textColor="@color/grayDarker"
                    android:textSize="17dp"
                    android:hint="메시지 입력 ..."
                    android:theme="@style/chatEditTextTheme"
                    android:tag="default" />

                <Button
                    android:id="@+id/msgLocationBtn"
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:textSize="22dp"
                    android:textColor="@color/grayLight"
                    android:background="@drawable/transparent"
                    android:text="@string/fa_compass"
                    android:tag="far"
                    android:layout_marginRight="90dp"
                    android:layout_alignParentRight="true"
                    android:onClick="onClick" />

                <Button
                    android:id="@+id/msgImageBtn"
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:textSize="22dp"
                    android:textColor="@color/grayLight"
                    android:background="@drawable/transparent"
                    android:text="@string/fa_image"
                    android:tag="far"
                    android:layout_marginRight="55dp"
                    android:layout_alignParentRight="true"
                    android:onClick="onClick" />

                <Button
                    android:id="@+id/msgSendBtn"
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="22dp"
                    android:textColor="@color/gray"
                    android:background="@color/grayLighter"
                    android:text="@string/fa_send"
                    android:tag="fas"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_alignParentRight="true"
                    android:onClick="onClick" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- 우측 메뉴 시작 -->
    <LinearLayout
        android:id="@+id/right_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/grayLighter"
        android:layout_gravity="right"
        android:choiceMode="singleChoice">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ivory"
            android:padding="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <android.support.v7.widget.CardView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:elevation="12dp"
                    android:layout_marginRight="7dp"
                    app:cardCornerRadius="20dp">
                    <ImageView
                        android:id="@+id/msgPfAvatar"
                        android:layout_height="45dp"
                        android:layout_width="match_parent"
                        android:src="@drawable/avatar">
                    </ImageView>
                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/msgPfNickname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="19dp"
                        android:tag="bold" />

                    <TextView
                        android:id="@+id/msgPfID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:textColor="@color/grayDarker"
                        android:textSize="14dp" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/msgPfInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.15"
                android:textSize="15dp"
                android:textColor="@color/grayDarker"
                android:tag="default" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/pfModifyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:background="@color/ivory"
            android:onClick="onClick">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/fa_pen"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"
                android:tag="fas"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_marginLeft="15dp"
                android:textColor="@color/grayDarker"
                android:text="프로필 수정하기"
                android:tag="menu" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/msgSettingBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:background="@color/ivory">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:text="@string/fa_setting"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"
                android:tag="fas"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_marginLeft="15dp"
                android:textColor="@color/grayDarker"
                android:text="채팅 환경 설정하기"
                android:tag="menu" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:background="@color/ivory">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:text="@string/fa_frpf"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"
                android:tag="far"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_marginLeft="15dp"
                android:textColor="@color/grayDarker"
                android:text="친구의 프로필"
                android:tag="menu"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@color/ivory">

            <android.support.v7.widget.CardView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginTop="7dp"
                android:elevation="12dp"
                app:cardCornerRadius="17.5dp">
                <ImageView
                    android:id="@+id/friendAvatar"
                    android:layout_height="45dp"
                    android:layout_width="match_parent"
                    android:src="@drawable/avatar">
                </ImageView>
            </android.support.v7.widget.CardView>
            <TextView
                android:id="@+id/friendNickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="17dp"
                android:textColor="@color/grayDarker"
                android:tag="bold" />

            <TextView
                android:id="@+id/friendInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.15"
                android:layout_margin="10dp"
                android:padding="15dp"
                android:textSize="15dp"
                android:textColor="@color/grayDarker"
                android:background="@color/colorPrimaryLighter"
                android:tag="default" />

        </LinearLayout>


    </LinearLayout>
</android.support.v4.widget.DrawerLayout>
